--- a/src/Resources/translations/messages.ru.yaml
+++ b/src/Resources/translations/messages.ru.yaml
@@ -21,5 +21,6 @@ zentlix_block:
     success: "Текстовый блок успешно изменен."
   delete:
     action:       "Удалить текстовый блок"
+    process:      "Удаление текстового блока"
     confirmation: "Вы действительно хотите удалить текстовый блок?"
     success:      "Текстовый блок успешно удален."
