--- a/src/Resources/translations/messages.ua.yaml
+++ b/src/Resources/translations/messages.ua.yaml
@@ -21,5 +21,6 @@ zentlix_block:
     success: "Текстовий блок успішно змінений."
   delete:
     action:       "Видалити текстовий блок"
+    process:      "Видалення текстового блоку"
     confirmation: "Ви дійсно бажаєте видалити текстовий блок?"
     success:      "Текстовий блок успішно видалений."
